[package]
name = "pngme"
version = "0.5.1"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A command line program that lets you hide secret messages in PNG files."
repository = "https://github.com/disDeal/pngcrypt-rs"
readme = "README.md"
keywords = ["crypto", "png", "image", "commandline", "steganography"]
categories = ["command-line-utilities", "Encoding", "Images"]
exclude = [".gitignore", ".github"]

[badges]
appveyor = { repository = "https://github.com/disDeal/pngcrypt-rs", branch = "master", service = "github" }
maintenance = { status = "as-is" }

[dependencies]
crc = "1.8.1"
structopt = "0.3.15"
